--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-<a>기호</a>
+<a href = "https://www.naver.com/">Go to naver.com</a>
 <h1>header number 1</h1>
 <h2>hi</h2>
 
-<li></li>
-<ol></ol>
 <ul>
   <li>coffee</li>
   <li>pepsi</li>
