--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a href = "https://www.naver.com/">Go to naver.com</a>
+<a href = "https://www.naver.com/" target="_blank">Go to naver.com</a>
 <h1>header number 1</h1>
 <h2>hi</h2>
 
