--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <a href = "https://www.naver.com/" target="_blank">Go to naver.com</a>
+<a href = "https://www.naver.com/" target="_self">Go to naver.com</a>
+
 <h1>header number 1</h1>
 <h2>hi</h2>
 <img scr = "https://mblogthumb-phinf.pstatic.net/MjAxNzEwMjBfOCAg/MDAxNTA4NTA4MTkxMzI5.H5metiG3lM0M_u1wPQ4K1JFTSC09OL3DK4elPNl1Ch4g.PMkjduEwe_byJlbsQi8Dhe-79OkCPkXjzffS06DfI0cg.JPEG.wizpet1756/IMG_1063.jpg?type=w800">
