--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>header number 1</h1>
 <h2>hi</h2>
 <img
-  scr = "https://postfiles.pstatic.net/MjAyNDExMjNfMTQ5/MDAxNzMyMzQ3ODM0Mzg2.cFKIIQJAY9CbkFC6IkU6K-7zbmE_PfuTMFBs6UnSYkcg.7XbDJuvJJno8wYxIl_6oNs8m1ElD2TEscGIeao9ubhYg.PNG/image.png?type=w773"
+  src = "https://postfiles.pstatic.net/MjAyNDExMjNfMTQ5/MDAxNzMyMzQ3ODM0Mzg2.cFKIIQJAY9CbkFC6IkU6K-7zbmE_PfuTMFBs6UnSYkcg.7XbDJuvJJno8wYxIl_6oNs8m1ElD2TEscGIeao9ubhYg.PNG/image.png?type=w773"
   />
 
 <ul>
