--- a/index.html
+++ b/index.html
@@ -1,19 +1,7 @@
-<a href = "https://www.naver.com/" target="_blank">Go to naver.com</a>
-<a href = "https://www.naver.com/" target="_self">Go to naver.com</a>
-
-<h1>header number 1</h1>
-<h2>hi</h2>
-<img
-  src = "https://postfiles.pstatic.net/MjAyNDExMjNfMTQ5/MDAxNzMyMzQ3ODM0Mzg2.cFKIIQJAY9CbkFC6IkU6K-7zbmE_PfuTMFBs6UnSYkcg.7XbDJuvJJno8wYxIl_6oNs8m1ElD2TEscGIeao9ubhYg.PNG/image.png?type=w773"
-  />
-
-<ul>
-  <li>coffee</li>
-  <li>pepsi</li>
-  <li>lottee</li>
-</ul>
-<ol>
-  <li>coffee</li>
-  <li>pepsi</li>
-  <li>lottee</li>
-</ol>
+<!DOVTYPE html>
+<html>
+  <body>
+    <h1>기호의 웹사이트</h1>
+    <a href = "https://blog.naver.com/sghtao">블로그</a>
+  </body>
+</html>
