--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOVTYPE html>
 <html>
+  <head>
+    <title>Home - my first website</title>
+  </head>
   <body>
     <h1>기호의 웹사이트</h1>
     <a href = "https://blog.naver.com/sghtao">블로그</a>
