--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOVTYPE html>
-<html>
+<html lang = "kr>
   <head>
+    <link
+      rel = "shortcut icon" 
+      sizes="16x16 32x32 64x64"
+      href ="https://nomadcoders.co/m.svg"
+    />
     <title>Home - my first website</title>
+    <meta name = "description" content = "This is my website">
+    <meta charset = "utf-8>
   </head>
   <body>
     <h1>기호의 웹사이트</h1>
