--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
       href ="https://nomadcoders.co/m.svg"
     />
     <title>Home - my first website</title>
-    <meta name = "description" content = "This is my website">
-    <meta charset = "utf-8>
+    <meta name = "description" content = "This is my website" />
+    <meta charset = "utf-8"/>
   </head>
   <body>
     <h1>기호의 웹사이트</h1>
     <a href = "https://blog.naver.com/sghtao">블로그</a>
+    <p>내가만든블로그너를위해구웠찌</p>
   </body>
 </html>
