--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link
       rel = "shortcut icon" 
       sizes="16x16 32x32 64x64"
-      href ="https://nomadcoders.co/m.svg"
+      href ="https://blogpfthumb-phinf.pstatic.net/MjAyNDExMjJfNTYg/MDAxNzMyMjQxOTg5MzM1.k2Z_RzFGzWvbQve0zEvhQfQgqvcZasdGKOIfL77p48Ug.WGKnp8xZsO7sgcn4tWaeZF3N7xIGCRDbXWKjtiu-y2Ag.JPEG/profileImage.jpg?type=w161"
     />
     <title>Home - my first website</title>
     <meta name = "description" content = "This is my website" />
