--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <body>
     <h1>기호의 웹사이트</h1>
     <a href = "https://blog.naver.com/sghtao">블로그</a>
-    <p>내가만든블로그너를위해구웠찌</p>
+    <p>내가만든블로그너를위해구웠찌<abbr title ="뉴진스 쿠키 가사"> - cookies</p>
   </body>
 </html>
