--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <title>Home - my first website</title>
   </head>
   <body>
+    <form>
+      <header>
 
+      </header>
+      <main>
+        <label for = "name"> Name</label>
+        <input id = "name" required placeholder = "Name" type = "text" />
+        <input required placeholder = "Last Name" type = "text" />
+        <input required placeholder = "Username" type = "text" />
+        <input required placeholder = "Password" minlength = "10" type= "password" />
+        <input type ="submit" value = "Create Account" />
+      </main>
+      <footer>
+
+      </footer>
+    </form>
   </body>
 </html>
