--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <body>
     <form>
       <header>
-
+        <h1>나의 웹사이트</h1>
       </header>
       <main>
+        <span>이것저것 시도</span>
         <label for = "name"> Name</label>
         <input id = "name" required placeholder = "Name" type = "text" />
         <input required placeholder = "Last Name" type = "text" />
