--- a/index.html
+++ b/index.html
@@ -10,11 +10,22 @@
       </header>
       <main>
         <span>이것저것 시도</span>
-        <label for = "name"> Name</label>
-        <input id = "name" required placeholder = "Name" type = "text" />
-        <input required placeholder = "Last Name" type = "text" />
-        <input required placeholder = "Username" type = "text" />
-        <input required placeholder = "Password" minlength = "10" type= "password" />
+        <div>
+          <label for = "name">Name</label>
+          <input id = "name" required placeholder = "Name" type = "text" />
+        </div>
+        <div>
+          <label for = "lastname">Last Name</label>
+          <input id = "lastname" required placeholder = "Last Name" type = "text" />
+        </div>
+        <div>
+          <label for = "username">Last Name</label>
+          <input id = "username" required placeholder = "Username" type = "text" />
+        </div>
+        <div>
+          <label for = "password">Last Name</label>
+          <input id = "password" required placeholder = "Password" minlength = "10" type= "password" />
+        </div>
         <input type ="submit" value = "Create Account" />
       </main>
       <footer>
