--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
           <input id = "lastname" required placeholder = "Last Name" type = "text" />
         </div>
         <div>
-          <label for = "username">Last Name</label>
+          <label for = "username">Username Name</label>
           <input id = "username" required placeholder = "Username" type = "text" />
         </div>
         <div>
-          <label for = "password">Last Name</label>
+          <label for = "password">Password</label>
           <input id = "password" required placeholder = "Password" minlength = "10" type= "password" />
         </div>
         <input type ="submit" value = "Create Account" />
