--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang = "kr">
   <head>
     <title>Home - my first website</title>
+    <link href ="style.css" rel = "stylesheet"/>
+    <style>
+      h1 {
+        color: blue;
+        font-size:20px;
+      
+      }
+    </style>
   </head>
   <body>
     <form>
@@ -33,3 +41,4 @@
     </form>
   </body>
 </html>
+
