--- a/index.html
+++ b/index.html
@@ -4,41 +4,25 @@
     <title>Home - my first website</title>
     <link href ="style.css" rel = "stylesheet"/>
     <style>
-      h1 {
-        color: blue;
-        font-size:20px;
-      
+      div {
+        height: 150px;
+        width:150px;
+        background-color: tomato;
+      }
+      span {
+        display:block;
+        background-color: aqua;
       }
     </style>
   </head>
   <body>
-    <form>
-      <header>
-        <h1>나의 웹사이트</h1>
-      </header>
-      <main>
-        <span>이것저것 시도</span>
-        <div>
-          <label for = "name">Name</label>
-          <input id = "name" required placeholder = "Name" type = "text" />
-        </div>
-        <div>
-          <label for = "lastname">Last Name</label>
-          <input id = "lastname" required placeholder = "Last Name" type = "text" />
-        </div>
-        <div>
-          <label for = "username">Username Name</label>
-          <input id = "username" required placeholder = "Username" type = "text" />
-        </div>
-        <div>
-          <label for = "password">Password</label>
-          <input id = "password" required placeholder = "Password" minlength = "10" type= "password" />
-        </div>
-      </main>
-      <footer>
-        <input type ="submit" value = "Create Account" />
-      </footer>
-    </form>
+    <div></div>
+    <div></div>
+    <div></div>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    
   </body>
 </html>
 
