--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link href ="style.css" rel = "stylesheet"/>
     <style>
       div {
+        margin: 20px;
+        padding: 60px
         height: 150px;
         width:150px;
         background-color: tomato;
@@ -13,16 +15,34 @@
         display:block;
         background-color: aqua;
       }
+      #first {
+        background-color: aliceblue;
+      }
+      #second {
+        background-color: rgb(50, 226, 167);
+      }
+      #third {
+        background-color: rgb(228, 22, 22);
+      }
+      #forth {
+        background-color: rgb(233, 25, 222);
+      }
     </style>
   </head>
   <body>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div id = "first">
+      <div id ="second">
+        <div id = "third">
+          <div id = "forth">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  
     <span>hello</span>
     <span>hello</span>
     <span>hello</span>
     
   </body>
 </html>
-
