--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
       div {
         margin: 20px;
-        padding: 60px
+        padding: 60px;
         height: 150px;
         width:150px;
         background-color: tomato;
