--- a/index.html
+++ b/index.html
@@ -4,43 +4,12 @@
     <title>Home - my first website</title>
     <link href ="style.css" rel = "stylesheet"/>
     <style>
-      div {
-        margin: 20px;
-        padding: 60px;
-        background-color: tomato;
-      }
-      span {
-        display:block;
-        background-color: aqua;
-      }
-      #first {
-        background-color: aliceblue;
-      }
-      #second {
-        background-color: rgb(50, 226, 167);
-      }
-      #third {
-        background-color: rgb(228, 22, 22);
-      }
-      #forth {
-        background-color: rgb(233, 25, 222);
+      body {
+        margin: 0px;
       }
     </style>
   </head>
   <body>
-    <div id = "first">
-      <div id ="second">
-        <div id = "third">
-          <div id = "forth">
-
-          </div>
-        </div>
-      </div>
-    </div>
-  
     <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    
   </body>
 </html>
