--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <link href ="style.css" rel = "stylesheet"/>
     <style>
       body {
-        margin: 0px;
+        margin: 20px;
+      }
+      span {
+        background-color: blue;
       }
     </style>
   </head>
   <body>
     <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+  
   </body>
 </html>
