--- a/index.html
+++ b/index.html
@@ -8,16 +8,25 @@
         margin: 20px;
       }
       span {
-        background-color: blue;
+        background-color: rgb(40, 238, 228);
+      }
+      #tomato {
+        background-color: tomato;
+      }
+      #tomato2 {
+        background-color: tomato;
+      }
+      #tomato3 {
+        background-color: tomato;
       }
     </style>
   </head>
   <body>
+    <span id = "tomato">hello</span>
     <span>hello</span>
+    <span id = "tomato2">hello</span>
     <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
+    <span id = "tomato3">hello</span>
     <span>hello</span>
   
   </body>
