--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
       span {
         background-color: rgb(40, 238, 228);
       }
-      #tomato {
-        background-color: tomato;
-      }
-      #tomato2 {
-        background-color: tomato;
-      }
+      #tomato,
+      #tomato2,
       #tomato3 {
         background-color: tomato;
       }
