--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
       span {
         background-color: rgb(40, 238, 228);
       }
-      #tomato,
-      #tomato2,
-      #tomato3 {
+      .tomato {
         background-color: tomato;
       }
     </style>
   </head>
   <body>
-    <span id = "tomato">hello</span>
+    <span class = "tomato">hello</span>
     <span>hello</span>
-    <span id = "tomato2">hello</span>
+    <span class = "tomato">hello</span>
     <span>hello</span>
-    <span id = "tomato3">hello</span>
+    <span class = "tomato">hello</span>
     <span>hello</span>
   
   </body>
 </html>
+
