--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       }
       .tomato {
         background-color: tomato;
+        color: white;
+        padding: 5px 10px;
       }
     </style>
   </head>
@@ -25,4 +27,3 @@
   
   </body>
 </html>
-
