--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         background-color: tomato;
         color: white;
         padding: 5px 10px;
+        border-radius: 10px;
       }
     </style>
   </head>
@@ -27,3 +28,4 @@
   
   </body>
 </html>
+
