--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
       body {
         margin: 20px;
       }
-      span {
+      .btn {
+        padding: 5px 10px;
+        border-radius: 10px;
+      }
+      .teal {
         background-color: rgb(40, 238, 228);
       }
       .tomato {
         background-color: tomato;
         color: white;
-        padding: 5px 10px;
-        border-radius: 10px;
       }
     </style>
   </head>
   <body>
-    <span class = "tomato">hello</span>
-    <span>hello</span>
-    <span class = "tomato">hello</span>
-    <span>hello</span>
-    <span class = "tomato">hello</span>
-    <span>hello</span>
+    <span class = "btn tomato">hello</span>
+    <span class ="btn teal">hello</span>
+    <span class = "btn tomato">hello</span>
+    <span class ="btn teal">hello</span>
+    <span class = "btn tomato">hello</span>
+    <span class ="btn teal">hello</span>
   
   </body>
 </html>
