--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         padding: 5px 10px;
         border-radius: 10px;
       }
-      .teal {
+      .rgb {
         background-color: rgb(40, 238, 228);
       }
       .tomato {
@@ -22,11 +22,11 @@
   </head>
   <body>
     <span class = "btn tomato">hello</span>
-    <span class ="btn teal">hello</span>
+    <span class ="btn rgb">hello</span>
     <span class = "btn tomato">hello</span>
-    <span class ="btn teal">hello</span>
+    <span class ="btn rgb">hello</span>
     <span class = "btn tomato">hello</span>
-    <span class ="btn teal">hello</span>
+    <span class ="btn rgb">hello</span>
   
   </body>
 </html>
